# ForGPT

jy_sdk_Lite2A_20220629/: deeprcs.json
jy_sdk_Lite2A_20220629/jy_sdk/: README.md
jy_sdk_Lite2A_20220629/jy_sdk/deepras/: CMakeLists.txt  sftp_to_up.sh
jy_sdk_Lite2A_20220629/jy_sdk/deepras/src/: main.cpp  version_ras.h
jy_sdk_Lite2A_20220629/jy_sdk/deepras/src/basic_function/: basic_method.cpp  basic_method.h  one_leg_control.cpp  one_leg_control.h
jy_sdk_Lite2A_20220629/jy_sdk/deepras/src/motion/: basic_motion.cpp  basic_motion.h
jy_sdk_Lite2A_20220629/jy_sdk/deepras/src/parameters/: inner_type.h  parameters_basic_motion.h  parameters_share.h  performance_states.h
jy_sdk_Lite2A_20220629/jy_sdk/robot_common/: README.md
jy_sdk_Lite2A_20220629/jy_sdk/robot_common/lib/kpa_lib/linux-uspace/: libecatmkpaA.so.1.6.48203  libecatmkpaB.so.1.6.48203  libecatmkpaP.so.1.6.48203  libecatmsvr.so.1.6.48203  libnet_drv.so.1.6.48203
jy_sdk_Lite2A_20220629/jy_sdk/robot_common/lib/rcs_lib/controller/: control_profile.h  controller.h  external_type.h  motion.h  version_interface.h
